HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncIteratorLoopTypingFamily/Expected.uv
//! Expected diagnostic metadata for the AsyncIteratorLoopTypingFamily rejected-source specimen.

expectedDiagnostic("E-CON-0240", "rule.16.AsyncIteratorLoopTypingFamily")
